test_src/compiler_errors/types/binary/AndBoolError4.b
class AndBoolError4 {
    void test() {
        Bool value = true;
        println(value &= 6);
    }
}
